@@ -1,2 +1,2 @@
-actions/* etc/pm/power.d
+actions/pm/* etc/pm/power.d
 powernap usr/share/pyshared
