@@ -4,7 +4,15 @@ powernap (2.17) unreleased; urgency=low
   * actions/{service,kernel_module}: Add scripts to handle services and
     kernel modules on powersave mode.
 
- -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 29 Nov 2011 14:48:03 -0500
+  [ Andres Rodriguez ]
+  * Re-organize source to differ between pm-utils actions and powernap
+    actions.
+    - debian/powernap-common.install: Update.
+    - powernap.spec: Update.
+  * Add SERVICES and MODULES initial support:
+    - powernap/powernap.py: Load from config.
+
+ -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 29 Nov 2011 17:41:15 -0500
 
 powernap (2.16-0ubuntu1) precise; urgency=low
 
